# open-agent-memory-protocol

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mise.toml
.github/workflows/: auto-translate-spec.yml  ci.yml  release.yml  trigger-site-sync.yml
docs/: README.ja.md  README.ko.md  README.ms.md  README.zh.md  governed-memory-interop-matrix.md  governed-memory-issue-backlog.md  guide-for-agents.md  guide-for-backends.md  security-guide.md
proto/oamp/v1/: knowledge.proto  user_model.proto
reference/compliance/: README.md  pyproject.toml
reference/compliance/src/oamp_compliance/: __init__.py  client.py  models.py  reporter.py  runner.py
reference/compliance/src/oamp_compliance/tests/: __init__.py  functional.py  must.py  should.py  utils.py
reference/elixir/: README.md  mix.exs
reference/elixir/lib/: oamp_types.ex
reference/elixir/test/: expertise_level_test.exs  knowledge_category_test.exs  knowledge_test.exs  user_model_test.exs  validate_test.exs
reference/go/: README.md  go.mod  knowledge.go  knowledge_test.go  oamp.go  user_model.go  user_model_test.go  validate.go  validate_test.go
reference/python/: .gitignore  README.md  pyproject.toml
reference/python/src/oamp_types/: __init__.py  knowledge.py  user_model.py  validate.py
reference/python/src/oamp_types/proto/oamp/v1/: knowledge_pb2.py  knowledge_pb2.pyi  user_model_pb2.py  user_model_pb2.pyi
reference/python/tests/: __init__.py  test_oamp_types.py
reference/rust/: Cargo.toml  README.md
reference/rust/src/: knowledge.rs  lib.rs  user_model.rs  validate.rs
reference/rust/tests/: roundtrip_test.rs
reference/server/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
reference/server/src/oamp_server/: __init__.py  __main__.py  auth.py  config.py  encryption.py  main.py
reference/server/src/oamp_server/api/: __init__.py  admin.py  bulk.py  capabilities.py  errors.py  knowledge.py  user_model.py
reference/server/src/oamp_server/middleware/: __init__.py  audit.py
reference/server/src/oamp_server/repository/: __init__.py  base.py  sqlite.py
reference/server/src/oamp_server/services/: __init__.py  knowledge.py  user_model.py
reference/server/tests/: conftest.py  test_bulk.py  test_capabilities.py  test_encryption.py  test_governance_enforcement.py  test_health_and_roundtrip.py  test_knowledge_crud.py  test_knowledge_search.py  test_sdk_integration.py  test_search_fts5.py  test_spec_client.py  test_user_model.py  test_validation.py
reference/typescript/: README.md  package-lock.json  package.json  tsconfig.json
scripts/: auto-translate.py  interop-roundtrip.sh  protoc-gen.sh
spec/proposals/: 2026-05-07-permissioned-memory-v1.3.md  2026-05-07-permissioned-memory.md
spec/v1/: knowledge-entry.schema.json  knowledge-store.schema.json  oamp-v1.ja.md  oamp-v1.ko.md  oamp-v1.md  oamp-v1.ms.md  oamp-v1.zh.md  openapi.yaml  user-model.schema.json
spec/v1.1/: oamp-v1.1-draft.md  oamp-v1.1.md
spec/v1.2/: knowledge-entry.schema.json  knowledge-store.schema.json  oamp-v1.2-draft.md  oamp-v1.2-governed-memory-draft.md  oamp-v1.2-governed-memory.md  oamp-v1.2.md  openapi.yaml
spec/v1.3/: knowledge-entry.schema.json  knowledge-store.schema.json  oamp-v1.3-draft.md  openapi.yaml
validators/: validate.sh
(+36 files in other folders)
