[project]
name = "oamp-compliance"
version = "1.0.0"
description = "Compliance test suite for the Open Agent Memory Protocol (OAMP) v1"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.scripts]
oamp-compliance = "oamp_compliance.runner:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
