[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oamp-types"
version = "1.0.1"
description = "Open Agent Memory Protocol (OAMP) types for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["ai", "agent", "memory", "protocol", "oamp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/oamp_types"]

[tool.pytest.ini_options]
testpaths = ["tests"]