[package]
name = "oamp-types"
version = "1.0.0"
edition = "2021"
description = "Open Agent Memory Protocol (OAMP) types for Rust"
license = "Apache-2.0"
repository = "https://github.com/deep-thinking-llc/open-agent-memory-protocol"
keywords = ["ai", "agent", "memory", "protocol"]
categories = ["data-structures", "encoding"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
